examples/test/testpolicy1347.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1347
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key49: value24
      key32: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value38
      podSelector:
        matchLabels:
          key32: value48
          key27: value35
          key34: value42
